<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <LinearLayout
            android:id="@+id/activity_main"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_presentation"
            />

        <Button
            android:id="@+id/btnConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_app_settings"
            android:onClick="configurations"
            />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_img_selection"
            android:id="@+id/buttonSelect"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="270dp"
            android:id="@+id/imageView"
            android:layout_below="@+id/buttonSelect"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/editTextImageName" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextImageName"
            android:layout_above="@+id/buttonUpload"
            android:layout_centerHorizontal="true"
            android:hint="@string/editText_img_name"
            android:gravity="center"
            />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_img_upload"
            android:id="@+id/buttonUpload"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </LinearLayout>

</ScrollView>